--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
               class="octicon octicon-link"></span></a>EVI-DSS</h2>
 
         <p>
-          The project EVI-DSS is a decision support system for electric vehicle infrastructure (EVI) design commissioned by the <a href="https://www.wsdot.wa.gov/">Washington State Department of Transportation</a>. The underlying modeling framework is general enough that the tool can be used at any scale, any where. The detailed documentation for the project with links to the code can be found <a href="https://evi-dss.readthedocs.io/en/latest/">here</a>.
+          The project EVI-DSS is a decision support system for electric vehicle infrastructure (EVI) design commissioned
+          by the <a href="https://www.wsdot.wa.gov/">Washington State Department of Transportation</a>. The underlying
+          modeling framework is general enough that the tool can be used at any scale, any where. The detailed
+          documentation for the project with links to the code can be found <a
+            href="https://evi-dss.readthedocs.io/en/latest/">here</a>.
 
         </p>
 
@@ -55,7 +59,7 @@
             href="https://github.com/aidowu">Atinuke Ademola-Idowu</a>, I developed a data-pipeline to process
           high-resolution power meter time series data for the <a href="http://acep.uaf.edu/">Alaska
             Center of Energy and Power</a> with the goal of quantifying the savings in demand charges by meter
-          aggregation. The resluting python package <a
+          aggregation. The resulting python package <a
             href="https://github.com/demand-consults/demand_acep">demand_acep</a> is available open-source for general
           consumption.
         </p>
